--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
               docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c 'python manage.py makemigrations && python manage.py makemigrations allauth && python manage.py migrate && python manage.py setup_sequencing_centres && python manage.py createsuperuser --noinput'
       - run: "docker cp test/testcases/ERGA_SAMPLE_MANIFEST_v2.5_success_several_samples1.xlsx $(docker-compose -f test/docker-compose.yaml ps -q copo_browser):/usr/src/app/workspace/"
       - run:  |
-            echo "running copo-login-logout.js" && \
+            ( echo "running copo-login-logout.js" && \
             docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/copo-login-logout.js)" && \
             echo "running assign_permission.js" && \
             docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/assign_permission.js)" && \
@@ -64,9 +64,9 @@ jobs:
             echo "running ERGA_upload_manifest.js" && \
             docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_upload_manifest.js)" && \
             echo "running ERGA_approve_samples.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_approve_samples.js)" || 
-            docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web) && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c "less /copo/logs/*.log" && exit 1
+            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_approve_samples.js)" ) || 
+            (docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web) && \
+            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c "less /copo/logs/*.log" && exit 1)
     
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
