update for auto test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,32 +53,38 @@ jobs:
               docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c 'python manage.py makemigrations && python manage.py makemigrations allauth && python manage.py migrate && python manage.py setup_sequencing_centres && python manage.py createsuperuser --noinput'
       - run: "docker cp test/testfiles/. $(docker-compose -f test/docker-compose.yaml ps -q copo_browser):/usr/src/app/workspace"
       - run:  |
-            ( echo "running copo-login-logout.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/copo-login-logout.js)" && \
+            local copo_browser=$(docker-compose -f test/docker-compose.yaml ps -q copo_browser)
+            local copo_web=$(docker-compose -f test/docker-compose.yaml ps -q copo_web)
+           (echo "running copo-login-logout.js" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/copo-login-logout.js)" && \
             echo "running assign_permission.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/assign_permission.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/assign_permission.js)" && \
             echo "running assign_sequencing_center.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/assign_sequencing_center.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/assign_sequencing_center.js)" && \
             echo "running ERGA_profile.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_profile.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_profile.js)" && \
             echo "running ERGA_upload_manifest.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_upload_manifest.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_upload_manifest.js)" && \
             echo "running ERGA_approve_samples.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_approve_samples.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_approve_samples.js)" && \
             echo "running ERGA_update_manifest.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_update_manifest.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_update_manifest.js)" && \
             echo "running ERGA_approve_samples.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_approve_samples.js)" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_approve_samples.js)" && \
+            echo "running ERGA_permit.js" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_permit.js)" && \
+            echo "running ERGA_approve_samples.js" && \
+            docker exec $copo_browser node -e "$(cat test/testcases/ERGA_approve_samples.js)" && \            
             echo "running Standalone_profile.js" && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/Standalone_profile.js)"  && \
+            docker exec $copo_browser node -e "$(cat test/testcases/Standalone_profile.js)"  && \
             #echo "running Standalone_files.js" && \
-            #docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/Standalone_files.js)"  && \
+            #docker exec $copo_browser node -e "$(cat test/testcases/Standalone_files.js)"  && \
             echo "done") || \
-            (docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web) && \
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c "less /copo/logs/*.log" && exit 1)
+            (docker logs $copo_web && \
+            docker exec $copo_web bash -c "less /copo/logs/*.log" && exit 1)
       - run : |
-            docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web) 
-            docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c "less /copo/logs/*.log
+            docker logs $copo_web 
+            docker exec $copo_web bash -c "less /copo/logs/*.log
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
