--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,10 +52,12 @@ jobs:
               wait_for_readiness  copo_web 8000
               docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c 'python manage.py makemigrations && python manage.py makemigrations allauth && python manage.py migrate && python manage.py setup_sequencing_centres && python manage.py createsuperuser --noinput'
       - run: "docker cp test/testfiles/. $(docker-compose -f test/docker-compose.yaml ps -q copo_browser):/usr/src/app/workspace"
-      - run:  |
-            local copo_browser=$(docker-compose -f test/docker-compose.yaml ps -q copo_browser)
-            local copo_web=$(docker-compose -f test/docker-compose.yaml ps -q copo_web)
-           (echo "running copo-login-logout.js" && \
+      - run:  
+          name: puppeteer test
+          command: |
+            copo_browser=$(docker-compose -f test/docker-compose.yaml ps -q copo_browser)
+            copo_web=$(docker-compose -f test/docker-compose.yaml ps -q copo_web)
+            (echo "running copo-login-logout.js" && \
             docker exec $copo_browser node -e "$(cat test/testcases/copo-login-logout.js)" && \
             echo "running assign_permission.js" && \
             docker exec $copo_browser node -e "$(cat test/testcases/assign_permission.js)" && \
@@ -79,7 +81,7 @@ jobs:
             docker exec $copo_browser node -e "$(cat test/testcases/Standalone_profile.js)"  && \
             #echo "running Standalone_files.js" && \
             #docker exec $copo_browser node -e "$(cat test/testcases/Standalone_files.js)"  && \
-            echo "done") || \
+            echo "done" ) || \
             (docker logs $copo_web && \
             docker exec $copo_web bash -c "less /copo/logs/*.log" && exit 1)
       - run : |
