--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,7 @@ jobs:
             (docker logs $copo_web && \
             docker exec $copo_web bash -c "less /copo/logs/*.log" && exit 1)
       - run : |
+            copo_web=$(docker-compose -f test/docker-compose.yaml ps -q copo_web)
             docker logs $copo_web 
             docker exec $copo_web bash -c "less /copo/logs/*.log
 
