--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -6,7 +6,7 @@ services:
       - bash
       - -c
       - |
-        rsync -avhW --no-compress --progress --exclude 'media' /code/ /copo/ && rm -rf /code/ && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
+        rsync -avhW --no-compress --progress --exclude 'media' --exclude 'logs' /code/ /copo/ && rm -rf /code/ && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
     volumes:
       - web-data:/copo/media
       - static-data:/copo/static
@@ -108,7 +108,7 @@ services:
       - bash
       - -c
       - |
-        rsync -avhW --no-compress --progress --exclude 'static' /code/ /copo/ && rm -rf /code/ && supervisord -c src/celery.conf && supervisorctl -c src/celery.conf start all && sleep infinity   
+        rsync -avhW --no-compress --progress --exclude 'static' --exclude 'logs' /code/ /copo/ && rm -rf /code/ && supervisord -c src/celery.conf && supervisorctl -c src/celery.conf start all && sleep infinity   
     volumes:
       - web-data:/copo/media
       - logs-data:/copo/logs
