--- a/deployment/copo.compose.production.yaml
+++ b/deployment/copo.compose.production.yaml
@@ -152,7 +152,7 @@ services:
       - BIOIMAGE_SERVER=bsaspera_w@hx-fasp-1.ebi.ac.uk
       - ECS_SECRET_KEY_FILE=/run/secrets/ecs_secret_key
       - ECS_ACCESS_KEY_ID=copo@nbi.ac.uk
-      - ECS_ENDPOINT=http://ei-copo.obj-data.nbi.ac.uk
+      - ECS_ENDPOINT=https://ei-copo.obj-data.nbi.ac.uk
       - ENA_V2_SERVICE_SYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://www.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
@@ -193,6 +193,8 @@ services:
       - copo_mail_password
       - copo_bioimage_path
       - ecs_secret_key
+    extra_hosts:
+      - "ei-copo.obj-data.nbi.ac.uk:10.0.72.144"        
   nginx:
     image: copo/copo-nginx:1.25.3.1
     networks:
