--- a/deployment/web/Dockerfile_local_mac
+++ b/deployment/web/Dockerfile_local_mac
@@ -35,13 +35,13 @@ RUN pip install --use-deprecated=legacy-resolver -r /tmp/requirements/dev.txt
 WORKDIR /copo
 #COPY . /code/
 
-RUN wget -O webin-cli.jar https://github.com/enasequence/webin-cli/releases/download/6.5.1/webin-cli-6.5.1.jar
+#RUN wget -O webin-cli.jar https://github.com/enasequence/webin-cli/releases/download/6.5.1/webin-cli-6.5.1.jar
 
 # add aspera client to path
 COPY ./shared_tools/reposit/.aspera/ /root/.aspera/
 ENV PATH /root/.aspera/cli/bin:$PATH
 
-RUN curl -fsSL https://code-server.dev/install.sh | sh
+#RUN curl -fsSL https://code-server.dev/install.sh | sh
 
 #ENTRYPOINT ["bash","-c","rsync -avhW --no-compress --progress /code/ /copo/ &&  rm -rf /code/ && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && supervisord -c celery.conf && supervisorctl -c celery.conf start all && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 web.asgi:application"]
 
