--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -16,7 +16,7 @@ server {
     ssl_certificate_key   /run/secrets/copo-project.key;
     ssl_protocols         TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    client_max_body_size 0;
+    client_max_body_size 2048M;
     #client_body_buffer_size 700M;
     #upload_max_filesize 0;
     client_body_timeout 300s;
