--- a/common/schema_versions/isa_mappings/dwc_ena_mixs_tol_fields_mapping.json
+++ b/common/schema_versions/isa_mappings/dwc_ena_mixs_tol_fields_mapping.json
@@ -2154,9 +2154,9 @@
         },
         "SPECIMEN_ID": {
             "dwc": {
-                "field": "",
-                "uri": "",
-                "description": ""
+                "field": "materialSampleID",
+                "uri": "http://rs.tdwg.org/dwc/terms/materialSampleID",
+                "description": "An identifier for the dwc:MaterialSample (as opposed to a particular digital record of the dwc:MaterialSample). In the absence of a persistent global unique identifier, construct one from a combination of identifiers in the record that will most closely make the dwc:materialSampleID globally unique."
             },
             "ena": {
                 "field": "specimen_id",
@@ -2165,11 +2165,11 @@
                 "description": ""
             },
             "mixs": {
-                "field": "",
-                "type": "",
-                "uri": "",
+                "field": "source_mat_id",
+                "type": "array",
+                "uri": "https://genomicsstandardsconsortium.github.io/mixs/0000026",
                 "regex": "",
-                "description": ""
+                "description": "A unique identifier assigned to a material sample (as defined by http://rs.tdwg.org/dwc/terms/materialSampleID, and as opposed to a particular digital record of a material sample) used for extracting nucleic acids, and subsequent sequencing. The identifier can refer either to the original material collected or to any derived sub-samples. The INSDC qualifiers /specimen_voucher, /bio_material, or /culture_collection may or may not share the same value as the source_mat_id field. For instance, the /specimen_voucher qualifier and source_mat_id may both contain 'UAM:Herps:14' , referring to both the specimen voucher and sampled tissue with the same identifier. However, the /culture_collection qualifier may refer to a value from an initial culture (e.g. ATCC:11775) while source_mat_id would refer to an identifier from some derived culture from which the nucleic acids were extracted (e.g. xatc123 or ark:/2154/R2)"
             },
             "tol": {
                 "field": "SPECIMEN_ID",
