use different celery queue for file transfer process

--- a/src/celery.conf
+++ b/src/celery.conf
@@ -168,10 +168,9 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 
-
-
 [program:copoceleryworker]
-command=celery -A src worker -P gevent --concurrency 10 -l critical -Q celery
+command=celery -A src worker -P gevent --concurrency 10 -l critical -Q celery --hostname=celery@%h
+command=celery -A src worker -P gevent --concurrency 20 -l critical -Q file_transfers --hostname=file_transfers@%h
 stdout_logfile = /tmp/celery.log
 redirect_stderr=true
 
