update supervisor program definition

--- a/src/celery.conf
+++ b/src/celery.conf
@@ -169,9 +169,13 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:copoceleryworker]
-command=celery -A src worker -P gevent --concurrency 10 -l critical -Q celery --hostname=celery@%h
-command=celery -A src worker -P gevent --concurrency 20 -l critical -Q file_transfers --hostname=file_transfers@%h
+command=celery -A src worker -P gevent --concurrency 10 -l critical -Q celery --hostname celery 
 stdout_logfile = /tmp/celery.log
+redirect_stderr=true
+
+[program:copocfiletransfereleryworker]
+command=celery -A src worker -P gevent --concurrency 20 -l critical -Q file_transfers  --hostname file_transfers
+stdout_logfile = /tmp/celery-file-transfers.log
 redirect_stderr=true
 
 ;[program:copocelerylongworker]
