Ignore contents in the 'media/news_images' folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ media/assets/manifests/ERC*
 media/assets/manifests/ERT*
 media/assets/manifests/read*
 media/ena_read_files/
+media/news_images/
 media/sample_images/
 media/sample_permits/
 media/uploads/
