change "erga-satellites" to "erga-community"

--- a/common/schema_versions/isa_mappings/erga_manifest_fields.json
+++ b/common/schema_versions/isa_mappings/erga_manifest_fields.json
@@ -1367,7 +1367,7 @@
                     "ERGA-associated",
                     "ERGA-BGE",
                     "ERGA-Pilot",
-                    "ERGA-Satellites"
+                    "ERGA-Community"
                 ]
             },
             {
