base image update to ubuntu 22.04

--- a/deployment/web/Dockerfile
+++ b/deployment/web/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.10.13-bullseye
+#FROM python:3.10.13-bullseye
+FROM python:3.10.15-bookworm
 
 ENV PYTHONUNBUFFERED 1
 
@@ -10,7 +11,7 @@ RUN apt-get update && apt-get install -y \
     vim \
     less \
     libxml2-dev \
-    python \
+    python3 \
     build-essential \
     make \
     gcc \
@@ -19,7 +20,8 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     ruby-dev \
     rubygems \
-    poppler-utils && \
+    poppler-utils \
+    python-is-python3 && \
     gem install sass && \
     pip install --upgrade pip && \
     apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
@@ -33,7 +35,7 @@ RUN mkdir /code
 WORKDIR /copo
 COPY . /code/
 
-RUN wget -O webin-cli.jar https://github.com/enasequence/webin-cli/releases/download/7.0.1/webin-cli-7.0.1.jar
+RUN wget -O webin-cli.jar https://github.com/enasequence/webin-cli/releases/download/8.0.0/webin-cli-8.0.0.jar
 
 # add aspera client to path
 COPY ./shared_tools/reposit/.aspera/ /root/.aspera/
