for local development & auto test:  use 'http' for login call back link

--- a/deployment/local-docker-compose-mac.yaml
+++ b/deployment/local-docker-compose-mac.yaml
@@ -55,6 +55,7 @@ services:
       - DJANGO_SUPERUSER_USERNAME=admin
       - DJANGO_SUPERUSER_PASSWORD=admin
       - DJANGO_SUPERUSER_EMAIL=admin@test.com
+      - http_protocol=http
     depends_on:
       - copo_redis
       - copo_postgres
